--- a/src/layout/button.module.scss
+++ b/src/layout/button.module.scss
@@ -1,4 +1,15 @@
-.headers {
+.menu {
+    min-width: 60%;
     display: flex;
-    color: black;
+    text-align: center;
+    text-decoration: underline;
+    color: #364945;
+}
+
+.drop_down {
+    color: white;
+    background-color: #364945;
+    display: flex;
+    text-decoration: none;
+    justify-content: center;
 }
