--- a/src/pages/acceuil.module.scss
+++ b/src/pages/acceuil.module.scss
@@ -1,10 +1,32 @@
+@font-face {
+  font-family: palatino;
+  src: url(../assets/Palatino.woff2);
+}
+
+* {
+  box-sizing: border-box;  
+  margin: 0;
+  font-family: palatino;
+}
+
 h1 {
   color: white;
   text-align: center;
 }
 
-p {
-  margin-left: 65vh;
+h2 {
+  margin-left: 30vh;
+  margin-top: 10vh;
+}
+
+h3 {
+  margin-left: 10vh;
+  margin-top: 5vh;
+}
+
+h4 {
+  margin-top: 5vh;
+  margin-left: 5vh;
 }
 
 header {
@@ -14,11 +36,11 @@ header {
 }
 
 img {
-  margin-left: 50vh;
-  height: 10%;
-  width: 10%;
+  margin-left: 40vh;
+  height: 15vh;
+  width: 15vh;
 }
 
-li {
+ul {
   display: flex;
 }
