--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
     font-family: sans-serif;
     color: #333;
     background-color: #f3e4d7;
-  } */
-  
+  }
+   */
   /* height of the container */
   .leaflet-container {
     height: 90vh;
