--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -1,11 +1,22 @@
-#h1 {
-    margin: 0;
-    padding: 0;
-  }
-  
-  #map {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-  }
+.contact h1 {
+    font-size: 300%;
+    color: white;
+    text-align: center;
+}
+
+.contact h2 {
+    font-size: 200%;
+    color: white;
+    text-align: center;
+}
+
+.lien {
+    font-size: 200%;
+    margin-left: 22vmax;
+}
+
+.contact header {
+    min-height: 100vh;
+    min-width: 100vh;
+    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+}
