--- a/src/pages/mode_de_vie.module.scss
+++ b/src/pages/mode_de_vie.module.scss
@@ -1,36 +1,29 @@
-
-.chirurgie h1 {
+.mdv h1 {
   font-size: 300%;
   color: white;
   text-align: center;
 }
-
-.chirurgie h2 {
-    padding-top: 10vh;
-    border-bottom: 2px solid #364945;
-    margin-right: 30vh;
-    margin-left: 30vh;
-    margin-top: 10vh;
+  
+.mdv h2 {
+  padding-top: 10vh;
+  border-bottom: 2px solid #364945;
+  margin-right: 30vh;
+  margin-left: 30vh;
 }
 
-.chirurgie h3 {
+.mdv h3 {
   margin-left: 10vh;
   margin-top: 2vh;
+  margin-bottom: 2vh;
   padding-right: 10vh;
 }
-
-.chirurgie h4 {
-  margin-top: 5vh;
-  margin-left: 5vh;
-}
-
-.chirurgie header {
+.mdv header {
   min-height: 100vh;
   min-width: 100vh;
   background: url(./src/assets/image.jpg) center/cover,no-repeat;
 }
 
-.chirurgie img {
+.mdv img {
   margin-left: 35vmax;
   height: 20vh;
   width: 20vh;
@@ -47,14 +40,8 @@
   border-bottom: 100vmax solid #364945;
   border-left: 90px solid TRANSPARENT;
   border-right: 0px solid TRANSPARENT;
- }
-
-.content {
-  position: relative;
-  top:-85vmax
 }
-
-.visite {
-    margin-left: 20px;
-    margin-bottom: 20px;
+.mdv .content {
+  margin-top: -90vmax;
+  margin-bottom: 2vmax;
 }
