fix style details

--- a/src/pages/accueil.module.scss
+++ b/src/pages/accueil.module.scss
@@ -79,9 +79,12 @@
   margin: 10px;
 }
 
-.content a {
-  padding-top: 5vh;
+.lien {
+  margin-top: 5vh;
+  font-size: 1.5em;
   margin-left: 10vh;
+  margin-right: 30vh;
+  max-width: 50%;
 }
 
 .type{
