--- a/src/pages/parasites.module.scss
+++ b/src/pages/parasites.module.scss
@@ -6,9 +6,10 @@
   
 .parasites h2 {
   padding-top: 10vh;
-  border-bottom: 2px solid #364945;
+  border-top: 2px solid #364945;
   margin-right: 30vh;
   margin-left: 30vh;
+  margin-top: 10vh;
 }
 
 .parasites header {
