fix bug background

--- a/src/pages/boutique.module.scss
+++ b/src/pages/boutique.module.scss
@@ -34,7 +34,7 @@
 .boutique header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 .boutique img {
     margin-left: 35vmax;
