--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -18,5 +18,5 @@
 .contact header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
 }
