--- a/src/pages/depot.module.scss
+++ b/src/pages/depot.module.scss
@@ -15,7 +15,7 @@
 .depot header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 .depot img {
     margin-left: 35vmax;
