--- a/src/pages/imagerie.module.scss
+++ b/src/pages/imagerie.module.scss
@@ -18,7 +18,7 @@
 .imagerie header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 
 .trapeze {
