--- a/src/pages/vaccins.module.scss
+++ b/src/pages/vaccins.module.scss
@@ -22,7 +22,7 @@
     color:white;
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
   }
   
   .vaccin img {
