--- a/src/pages/chirurgie.module.scss
+++ b/src/pages/chirurgie.module.scss
@@ -27,7 +27,7 @@
 .chirurgie header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(./src/assets/image.jpg) center/cover,no-repeat;
+  background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 
 .chirurgie img {
