--- a/src/pages/consult.module.scss
+++ b/src/pages/consult.module.scss
@@ -15,7 +15,7 @@
 .consult header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
   }
   
 .consult img {
