--- a/src/pages/laboratoire.module.scss
+++ b/src/pages/laboratoire.module.scss
@@ -15,7 +15,7 @@
 .labo header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
 }
   
 .labo img {
