--- a/src/pages/parasites.module.scss
+++ b/src/pages/parasites.module.scss
@@ -15,7 +15,7 @@
 .parasites header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(./src/assets/image.jpg) center/cover,no-repeat;
+  background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 
 .parasites img {
