--- a/src/pages/steril.module.scss
+++ b/src/pages/steril.module.scss
@@ -20,7 +20,7 @@
 .steril header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(./src/assets/image.jpg) center/cover,no-repeat;
+  background: url(../assets/image.jpg) center/cover,no-repeat;
 }
 
 .steril img {
