--- a/src/pages/urgence.module.scss
+++ b/src/pages/urgence.module.scss
@@ -12,7 +12,7 @@
   .urgence header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(./src/assets/image.jpg) center/cover,no-repeat;
+    background: url(../assets/image.jpg) center/cover,no-repeat;
   }
   
   .urgence img {
