try fix backgroud

--- a/src/pages/accueil.module.scss
+++ b/src/pages/accueil.module.scss
@@ -33,7 +33,7 @@
 .accueil header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(../assets/image.jpg) center/cover,no-repeat;
+  background: url(@img/image.jpg) center/cover,no-repeat;
 }
 
 .accueil img {
