try fix backgroud

--- a/src/pages/accueil.module.scss
+++ b/src/pages/accueil.module.scss
@@ -30,10 +30,10 @@
   margin-left: 5vh;
 }
 
-.accueil header {
+.header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(@img/image.jpg) center/cover,no-repeat;
+  background: center/cover,no-repeat;
 }
 
 .accueil img {
