--- a/src/pages/consult.module.scss
+++ b/src/pages/consult.module.scss
@@ -12,10 +12,10 @@
       margin-top: 10vh;
   }
   
-.consult header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
+    background: center/cover,no-repeat;
   }
   
 .consult img {
