--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -15,8 +15,8 @@
     margin-left: 22vmax;
 }
 
-.contact header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
+    background: center/cover,no-repeat;
 }
