--- a/src/pages/depot.module.scss
+++ b/src/pages/depot.module.scss
@@ -12,11 +12,12 @@
     margin-bottom: 3vh;
 }
 
-.depot header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
+    background: center/cover,no-repeat;
 }
+
 .depot img {
     margin-left: 35vmax;
     height: 20vh;
