--- a/src/pages/imagerie.module.scss
+++ b/src/pages/imagerie.module.scss
@@ -15,10 +15,10 @@
     margin-bottom: 3vh;
 }
 
-.imagerie header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
+    background: center/cover,no-repeat;
 }
 
 .trapeze {
