--- a/src/pages/medecine.module.scss
+++ b/src/pages/medecine.module.scss
@@ -17,10 +17,10 @@
   margin-top: 2vh;
   padding-right: 10vh;
 }
-.medecine header {
+.header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(../assets/image.jpg) center/cover,no-repeat;
+  background: center/cover,no-repeat;
 }
 
 .medecine img {
