--- a/src/pages/steril.module.scss
+++ b/src/pages/steril.module.scss
@@ -17,10 +17,10 @@
   margin-bottom: 2vh;
   padding-right: 10vh;
 }
-.steril header {
+.header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(../assets/image.jpg) center/cover,no-repeat;
+  background: center/cover,no-repeat;
 }
 
 .steril img {
