--- a/src/pages/urgence.module.scss
+++ b/src/pages/urgence.module.scss
@@ -9,11 +9,11 @@
     margin-left: 30vh;
   }
   
-  .urgence header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
-  }
+    background: center/cover,no-repeat;
+}
   
   .urgence img {
     margin-left: 35vmax;
