--- a/src/pages/vaccins.module.scss
+++ b/src/pages/vaccins.module.scss
@@ -18,12 +18,12 @@
     padding-right: 10vh;
 }
 
-  .vaccin header {
-    color:white;
-    min-height: 100vh;
-    min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
-  }
+.header {
+  color: white;
+  min-height: 100vh;
+  min-width: 100vh;
+  background: center/cover,no-repeat;
+}
   
   .vaccin img {
     margin-left: 35vmax;
