--- a/src/pages/chirurgie.module.scss
+++ b/src/pages/chirurgie.module.scss
@@ -24,10 +24,10 @@
   margin-left: 5vh;
 }
 
-.chirurgie header {
+.header {
   min-height: 100vh;
   min-width: 100vh;
-  background: url(../assets/image.jpg) center/cover,no-repeat;
+  background: center/cover,no-repeat;
 }
 
 .chirurgie img {
