--- a/src/pages/laboratoire.module.scss
+++ b/src/pages/laboratoire.module.scss
@@ -12,10 +12,10 @@
     margin-bottom: 3vh;
 }
   
-.labo header {
+.header {
     min-height: 100vh;
     min-width: 100vh;
-    background: url(../assets/image.jpg) center/cover,no-repeat;
+    background: center/cover,no-repeat;
 }
   
 .labo img {
