--- a/src/pages/parasites.module.scss
+++ b/src/pages/parasites.module.scss
@@ -12,13 +12,19 @@
   margin-top: 10vh;
 }
 
+.menustick {
+  z-index: 3;
+  position: fixed;
+}
+
 .header {
-  min-height: 100vh;
+  min-height: 90vh;
   min-width: 100vh;
   background: center/cover,no-repeat;
 }
 
 .parasites img {
+  margin-top: 35px;
   margin-left: 35vmax;
   height: 20vh;
   width: 20vh;
