--- a/src/pages/chirurgie.module.scss
+++ b/src/pages/chirurgie.module.scss
@@ -1,4 +1,3 @@
-
 .chirurgie h1 {
   font-size: 300%;
   color: white;
@@ -24,13 +23,19 @@
   margin-left: 5vh;
 }
 
+.menustick {
+  z-index: 3;
+  position: fixed;
+}
+
 .header {
-  min-height: 100vh;
+  min-height: 90vh;
   min-width: 100vh;
   background: center/cover,no-repeat;
 }
 
 .chirurgie img {
+  margin-top: 35px;
   margin-left: 35vmax;
   height: 20vh;
   width: 20vh;
@@ -38,7 +43,7 @@
 
 .trapeze {
   position: relative;
-  top: -45vmax;
+  top: -45.5vmax;
   left: 44.1vmax;
   transform: rotate(270deg) scale(1, -1);
   height: 0;
