--- a/src/pages/depot.module.scss
+++ b/src/pages/depot.module.scss
@@ -12,13 +12,19 @@
     margin-bottom: 3vh;
 }
 
+.menustick {
+  z-index: 3;
+  position: fixed;
+}
+
 .header {
-    min-height: 100vh;
+    min-height: 90vh;
     min-width: 100vh;
     background: center/cover,no-repeat;
 }
 
 .depot img {
+    margin-top: 35px;
     margin-left: 35vmax;
     height: 20vh;
     width: 20vh;
