--- a/src/pages/imagerie.module.scss
+++ b/src/pages/imagerie.module.scss
@@ -3,7 +3,14 @@
     color: white;
     text-align: center;
 }
+
+.menustick {
+    z-index: 3;
+    position: fixed;
+}
+
 .imagerie img {
+    margin-top: 35px;
     margin-left: 35vmax;
     height: 20vh;
     width: 20vh;
@@ -16,7 +23,7 @@
 }
 
 .header {
-    min-height: 100vh;
+    min-height: 90vh;
     min-width: 100vh;
     background: center/cover,no-repeat;
 }
