--- a/src/pages/laboratoire.module.scss
+++ b/src/pages/laboratoire.module.scss
@@ -1,17 +1,28 @@
 
 .labo h1 {
+    padding-top: 10px;
     font-size: 300%;
     color: white;
     text-align: center;
 }
-  
-.labo h2 {
-    color: white;
-    margin-left: 20vh;
-    margin-right: 30vh;
-    margin-bottom: 3vh;
+
+.menustick {
+    z-index: 3;
+    position: fixed;
 }
-  
+
+.labo h2 {
+    margin-left: 30vh;
+    margin-right: 30vh;
+    max-width: 50%;
+}
+
+.content {
+    margin-top: 10%;
+    border-radius: 2rem;
+    background-color: beige;
+}
+
 .header {
     min-height: 100vh;
     min-width: 100vh;
@@ -19,21 +30,8 @@
 }
   
 .labo img {
+    margin-top: 35px;
     margin-left: 35vmax;
     height: 20vh;
     width: 20vh;
 }
-  
-.trapeze {
-    position: relative;
-    top: -45vmax;
-    left: 44.1vmax;
-    transform: rotate(270deg) scale(1, -1);
-    height: 0;
-    width: 10vmax;
-    border-top: 0px solid transparent;
-    border-bottom: 100vmax solid #364945;
-    border-left: 90px solid TRANSPARENT;
-    border-right: 0px solid TRANSPARENT;
-}
-  
