--- a/src/pages/vaccins.module.scss
+++ b/src/pages/vaccins.module.scss
@@ -1,50 +1,56 @@
 .vaccin h1 {
-    font-size: 300%;
-    color: white;
-    text-align: center;
-  }
-    
-  .vaccin h2 {
-    padding-top: 10vh;
-    border-bottom: 2px solid #364945;
-    margin-right: 30vh;
-    margin-left: 30vh;
-  }
-  
+  font-size: 300%;
+  color: white;
+  text-align: center;
+}
+
+.menustick {
+  z-index: 3;
+  position: fixed;
+}
+
+.vaccin h2 {
+  padding-top: 10vh;
+  border-bottom: 2px solid #364945;
+  margin-right: 30vh;
+  margin-left: 30vh;
+}
+
 .vaccin h3{
-    margin-left: 10vh;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    padding-right: 10vh;
+  margin-left: 10vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  padding-right: 10vh;
 }
 
 .header {
   color: white;
-  min-height: 100vh;
+  min-height: 90vh;
   min-width: 100vh;
   background: center/cover,no-repeat;
 }
   
-  .vaccin img {
-    margin-left: 35vmax;
-    height: 20vh;
-    width: 20vh;
-  }
+.vaccin img {
+  margin-top: 35px;
+  margin-left: 35vmax;
+  height: 20vh;
+  width: 20vh;
+}
   
-  .trapeze {
-    position: relative;
-    top: -45vmax;
-    left: 44.1vmax;
-    transform: rotate(270deg) scale(1, -1);
-    height: 0;
-    width: 10vmax;
-    border-top: 0px solid transparent;
-    border-bottom: 100vmax solid #364945;
-    border-left: 90px solid TRANSPARENT;
-    border-right: 0px solid TRANSPARENT;
-  }
+.trapeze {
+  position: relative;
+  top: -45vmax;
+  left: 44.1vmax;
+  transform: rotate(270deg) scale(1, -1);
+  height: 0;
+  width: 10vmax;
+  border-top: 0px solid transparent;
+  border-bottom: 100vmax solid #364945;
+  border-left: 90px solid TRANSPARENT;
+  border-right: 0px solid TRANSPARENT;
+}
   
-  .vaccin .content {
-    margin-top: -90vmax;
-    margin-bottom: 2vmax;
-  }
+.vaccin .content {
+  margin-top: -90vmax;
+  margin-bottom: 2vmax;
+}
